Dom här är ändrade så att det funkar hyffsat, men just nu så måste det finnas en jdk-fil någonstans för att installationen skall fortsätta

--- a/weblogic-fmw-domain.yml
+++ b/weblogic-fmw-domain.yml
@@ -11,7 +11,7 @@
     # Common properties. You may not delete this
     - wls-vars.yml
     # Infrastructure passwords
-    #- secrets.yml
+    - secrets.yml
   roles:
     - role: linux-wls
     - role: linux-jdk
