--- a/roles/linux-wls/tasks/main.yml
+++ b/roles/linux-wls/tasks/main.yml
@@ -15,7 +15,7 @@
   service: name=firewalld state=stopped enabled=no
 - name: Change kernel parameters
   sysctl: name="{{ item.key }}" value="{{ item.value }}" state=present
-  with_dict: kernel_params
+  with_dict: "{{ kernel_params }}"
 
 # ==> Create user and groups
 - name: Create groups
