Installationen funkar till start av admin-server ... Där saknas filen som förväntas finnas där: AdminServerStartService.sh

--- a/infra-vars.yml
+++ b/infra-vars.yml
@@ -9,7 +9,8 @@ jdk_installation_archive: 'jdk-8u161-linux-x64.tar.gz'
 jdk_folder: '{{ oracle_base }}/jdk1.8.0_161'
 
 # fmw installer
-mw_installer: 'fmw_12.2.1.2.0_infrastructure.jar'
+#mw_installer: 'fmw_12.2.1.2.0_infrastructure.jar'
+mw_installer: 'fmw_12.2.1.2.0_wls.jar'
 
 # database settings for repository
 dbserver_name: '192.168.56.13'
