--- a/wlsinstall/etc/ansible/ansible.cfg
+++ b/wlsinstall/etc/ansible/ansible.cfg
@@ -266,10 +266,10 @@
 #max_diff_size = 1048576
 
 [privilege_escalation]
-#become=True
-#become_method=sudo
-#become_user=root
-#become_ask_pass=False
+become=True
+become_method=sudo
+become_user=root
+become_ask_pass=False
 
 [paramiko_connection]
 
