--- a/wlsinstall/roles/wls_remote_config/tasks/main.yml
+++ b/wlsinstall/roles/wls_remote_config/tasks/main.yml
@@ -1,7 +1,9 @@
 # /etc/ansible/roles/wls_remote_config/tasks/main.yml
  
 - name: create domain
-  shell: /bin/su - "{{ oracle_install_user }}" -c "{{ unpack_sh }} -domain={{ domain_configuration_home }} -app_dir={{ domain_application_home }} -nodemanager_type={{ node_manager_type }} -nodemanager_home={{ node_manager_home }} -template={{ wls_template_file }}"
+  become_user: "{{ oracle_install_user }}"
+  shell: "{{ unpack_sh }} -domain={{ domain_configuration_home }} -app_dir={{ domain_application_home }} -nodemanager_type={{ node_manager_type }} -nodemanager_home={{ node_manager_home }} -template={{ wls_template_file }}"
+  args:
     creates="{{ set_domain_env_sh }}"
  
 - name: create application home directory
