--- a/wlsinstall/roles/wls_install/tasks/main.yml
+++ b/wlsinstall/roles/wls_install/tasks/main.yml
@@ -7,6 +7,15 @@
     owner="{{ oracle_install_user }}"
     group="{{ oracle_install_group }}"
     mode=0755
+
+- name: create domain configuration home directory
+  file:
+    path="{{ domain_configuration_home }}"
+    state=directory
+    owner="{{ oracle_install_user }}"
+    group="{{ oracle_install_group }}"
+    mode=0755
+    recurse=yes
     
 - name: create scripts directory
   file:
