Det här är filer i det repository jag laddade ner från github som jag inte fick att fungera

--- a/wlsinstall/roles/common/vars/main.yml
+++ b/wlsinstall/roles/common/vars/main.yml
@@ -121,7 +121,8 @@ pack_sh:                    "{{ runtime_home }}/installation/oracle_common/commo
 ##unpack_sh:                  "{{ weblogic_home }}/common/bin/pack.sh"
 ##unpack_sh:                    "{{ runtime_home }}/installation/oracle_common/common/bin/pack.sh"
 unpack_sh:                    "{{ runtime_home }}/installation/oracle_common/common/bin/unpack.sh"
-wlst_sh:                    "{{ weblogic_home }}/common/bin/wlst.sh"
+#wlst_sh:                    "{{ weblogic_home }}/common/bin/wlst.sh"
+wlst_sh:                    "{{ runtime_home }}/installation/oracle_common/common/bin/wlst.sh"
 
 
 ##### JVM parameters #####
