--- a/wlsinstall/roles/wls_deploy_config/tasks/main.yml
+++ b/wlsinstall/roles/wls_deploy_config/tasks/main.yml
@@ -20,3 +20,14 @@
   args:
     creates="{{ wls_template_file }}"
 ###  shell: "{{ pack_sh }} -managed=true -domain={{ domain_configuration_home }} -template=/u01/app/oracle/weblogic12.1.3/installation/wlserver/common/templates/wls/wls.jar -template_name={{ domain_name }}"
+
+
+###- file:
+###    path: /mnt/hgfs/wls_temp/tryout_domain.jar
+###    mode: 0777
+###
+###- fetch:
+###    src: /mnt/hgfs/wls_temp/tryout_domain.jar
+###    dest: /tmp
+###    #flat: yes
+###    fail_on_missing: yes
