--- a/ansible-weblogic12c/roles/common/vars/main.yml
+++ b/ansible-weblogic12c/roles/common/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 # roles/common/vars/main.yml
 ##### deploy actions #####
-deploy_targets:                        "{{ cluster_name }}"
+#deploy_targets:                        "{{ cluster_name }}"
+deploy_targets:                        "{{ domain_name }}"
 # deploy_action is either deploy or undeploy
 deploy_action:                         "undeploy"
