--- a/ansible-weblogic12c/roles/wls_deploy_applications/tasks/main.yml
+++ b/ansible-weblogic12c/roles/wls_deploy_applications/tasks/main.yml
@@ -1,29 +1,35 @@
-# /etc/ansible/roles/wls_deploy_applications/tasks/main.yml
  
 - name: create deploy_environment.py
+  sudo: true
+###  become_user: root
+###  become_user: "{{ oracle_user }}"
   template:
-    src=roles/common/templates/weblogic/deploy_environment_py.j2 
-    dest="{{ deploy_environment_py }}"
-    #owner="{{ oracle_install_user }}"
-    #group="{{ oracle_install_group }}"
-    #mode=0644
+    src: roles/wls_deploy_applications/templates/deploy_environment_py_j2 
+    dest: "{{ deploy_environment_py }}"
+###    dest: "/tmp/apa"
+    owner: "{{ oracle_user }}"
+    group: "{{ oracle_group }}"
+    mode: 0644
   register: deploy_environment_py_created
  
 - name: copy deployment artifacts
+  sudo: true
   copy:
     src=roles/common/files/weblogic/deploy/
     dest="{{ domain_application_home }}"
-    owner="{{ oracle_install_user }}"
-    group="{{ oracle_install_group }}"
+    owner="{{ oracle_user }}"
+    group="{{ oracle_group }}"
   register: deployment_artifacts_copied
  
-#- name: debug registered values
-#  debug: 
-#    var={{ item }}
-#  with_items:
-#    - deploy_environment_py_created
-#    - deployment_artifacts_copied
+- name: debug registered values
+  debug: 
+    var={{ item }}
+  with_items:
+    - deploy_environment_py_created
+    - deployment_artifacts_copied
  
-- name: (un)deploy applications
-  shell: /bin/su - "{{ oracle_install_user }}" -c "{{ wlst_sh }} -loadProperties {{ environment_properties }} {{ deploy_environment_py }}"
-  when: deploy_environment_py_created.changed or deployment_artifacts_copied.changed
+###- name: (un)deploy applications
+###  shell: /bin/su - "{{ oracle_install_user }}" -c "{{ wlst_sh }} -loadProperties {{ environment_properties }} {{ deploy_environment_py }}"
+###  when: deploy_environment_py_created.changed or deployment_artifacts_copied.changed
+
+# ../roles/wls_deploy_applications/tasks/main.yml
