Med dessa versioner så skall det gå att göra deployment till AdminServer och managed_1, men första försöket med att köra hela flödet initierat från Ansible. Det har fungerat att köra deployment_environment.py från wls-server.

--- a/ansible-weblogic12c/roles/common/vars/main.yml
+++ b/ansible-weblogic12c/roles/common/vars/main.yml
@@ -1,7 +1,7 @@
 ---
 # roles/common/vars/main.yml
 ##### deploy actions #####
-#deploy_targets:                        "{{ cluster_name }}"
-deploy_targets:                        "{{ domain_name }}"
+#deploy_targets:                        "{{ cluster_name }}" Detta är nog det som är att föredra om man har installerat ett cluster.
+deploy_targets:                        "{{admin_server_name}},{{managed_server_name}}"
 # deploy_action is either deploy or undeploy
 deploy_action:                         "deploy"
