--- a/ansible-weblogic12c/roles/wls_deploy_applications/tasks/main.yml
+++ b/ansible-weblogic12c/roles/wls_deploy_applications/tasks/main.yml
@@ -37,6 +37,17 @@
     msg: "Conditions to deploy are not met, either remove {{ deploy_environment_py }} or clean the directory {{ domain_application_home }} in the host"
   when: not deploy_environment_py_created.changed and not deployment_artifacts_copied.changed
 
+
+- name: debug value of variables
+  debug:
+    var=hostvars[inventory_hostname]
+
+- name: debug value of variables
+  debug: 
+    var={{ item }}
+  with_items:
+    - what_to_do
+ 
 - name: (un)deploy applications
   sudo: true
   shell: "id; {{ wlst_sh }} -loadProperties {{ environment_properties }} {{ deploy_environment_py }}"
