Om man stannar admin server eller managed server med respektive wls-script så kommer dom automatiskt att startas om. Det är väl node manager som håller rätt på dom. Har inte fått det att fungera att stoppa (och starta) dessa via Ansible. Det funkar inte heller som jag tänkt att stoppa och starta node manager från Ansible. Hela installationen går bra när jag inte har med dom Thol*-war filer som kräver att beehive och struts finns med som extensions. Det går också att köra mot http://127.0.0.1:8001/sample-hello-world/

--- a/ansible-weblogic12c/deployment-vars.yml
+++ b/ansible-weblogic12c/deployment-vars.yml
@@ -2,6 +2,8 @@
 deploy_environment_py: /oracle/fmw12.2.1/config/Domains/custom_domain/bin/deploy_environment.py
 #domain_application_home: /oracle/fmw12.2.1/config/Domains/custom_domain/autodeploy
 domain_application_home: /oracle/fmw12.2.1/config/Domains/custom_domain/apps
+# Must be defined in wls-vars.yml
+###domain_extension_home: /oracle/fmw12.2.1/config/Domains/custom_domain/lib # Must be defined in wls-vars.yml
 domain_configuration_home: /oracle/fmw12.2.1/config/Domains/custom_domain/config
 fusion_middleware_home: "{{ middleware_home }}"
 java_home: "{{ jdk_folder }}"
