--- a/ansible-weblogic12c/wls-stop-nodemanager.yml
+++ b/ansible-weblogic12c/wls-stop-nodemanager.yml
@@ -1,8 +1,7 @@
 ---
 - name: Define variables and deploy applications
   hosts: weblogic
-###  become_user: "{{ oracle_user }}"
-  become_user: root
+  sudo: True
   vars_files:
     # User defined variables for infrastructure
     - infra-vars.yml
@@ -11,4 +10,6 @@
     - deployment-vars.yml
   roles:
     - common
-    - wls_start_nodemanager
+    - wls-stop-nodemanager
+###  become_user: "{{ oracle_user }}"
+###  become_user: root
