--- a/ansible-weblogic12c/wls-vars.yml
+++ b/ansible-weblogic12c/wls-vars.yml
@@ -11,3 +11,5 @@ nodemanager_username: 'manager'
 weblogic_admin: 'weblogic'
 admin_server_name: 'AdminServer'
 server_hostname: '{{ ansible_fqdn }}'
+# Required for extension library
+domain_extension_home: /oracle/fmw12.2.1/config/Domains/custom_domain/lib
