--- a/ansible-weblogic12c/roles/start-admin-server/tasks/main.yml
+++ b/ansible-weblogic12c/roles/start-admin-server/tasks/main.yml
@@ -4,14 +4,31 @@
   file: state=directory path={{ domains_home }}/{{ domain_name }}/servers/{{ admin_server_name }}/security owner={{ oracle_user }} group={{ oracle_group }}
   tags:
     - start-admin-server
+
 - name: Create boot.properties file
   template: src=boot.properties dest={{ domains_home }}/{{ domain_name }}/servers/{{ admin_server_name }}/security/ owner={{ oracle_user }} group={{ oracle_group }}
   tags:
     - start-admin-server
+
 - name: Copy Admin Server start-up script
   template: src=start-admin-server.py dest={{ mw_installer_folder }} owner={{ oracle_user }} group={{ oracle_group }} mode=0755
   tags:
     - start-admin-server
+
+
+- name: create directory for extensions
+  sudo: true
+  file: path="{{ domain_extension_home }}" state=directory owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
+
+- name: copy extensions
+  sudo: true
+  copy:
+    src=roles/common/files/weblogic/lib/
+    dest="{{ domain_extension_home }}"
+    owner="{{ oracle_user }}"
+    group="{{ oracle_group }}"
+  register: deployment_lib_copied
+
 - name: Execute start Admin Server script
   shell: "{{ middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/start-admin-server.py > {{ oracle_base }}/logs/ADMIN_STARTUP_{{ domain_name }}_$(date +'%F') "
   sudo_user: '{{ oracle_user }}'
@@ -19,6 +36,7 @@
   poll: 0
   tags:
      - start-admin-server
+
 - name: Wait for Admin Server to startup
   wait_for: port={{ admin_server_port }} delay=3 timeout=90
   tags:
