--- a/ansible-weblogic12c/roles/wls-deploy-applications/tasks/main.yml
+++ b/ansible-weblogic12c/roles/wls-deploy-applications/tasks/main.yml
@@ -4,14 +4,26 @@
 ###  become_user: root
 ###  become_user: "{{ oracle_user }}"
   template:
-    src: roles/wls_deploy_applications/templates/deploy_environment_py_j2 
+    src: roles/wls-deploy-applications/templates/deploy_environment_py_j2 
     dest: "{{ deploy_environment_py }}"
-###    dest: "/tmp/apa"
     owner: "{{ oracle_user }}"
     group: "{{ oracle_group }}"
     mode: 0644
   register: deploy_environment_py_created
 
+- name: create directory for extensions
+  sudo: true
+  file: path="{{ domain_extension_home }}" state=directory owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
+
+- name: copy extensions
+  sudo: true
+  copy:
+    src=roles/common/files/weblogic/lib/
+    dest="{{ domain_extension_home }}"
+    owner="{{ oracle_user }}"
+    group="{{ oracle_group }}"
+  register: deployment_lib_copied
+ 
 - name: create directory for applications
   sudo: true
   file: path="{{ domain_application_home }}" state=directory owner={{ oracle_user }} group={{ oracle_group }} recurse=yes
