--- a/ansible-weblogic12c/roles/wls-start-managed-server/tasks/main.yml
+++ b/ansible-weblogic12c/roles/wls-start-managed-server/tasks/main.yml
@@ -1,32 +1,28 @@
-# ==> Copy library extensions 
-- name: copy library extensions
-  sudo: true
-  copy:
-    src="roles/common/files/weblogic/lib/"
-    dest="{{ domain_extension_home }}"
-    owner="{{ oracle_user }}"
-    group="{{ oracle_group }}"
-  register: extension_lib_copied
+- name: Start Node Manager
+  command: 'systemctl start nodemanager'
+  tags:
+    - start-nodemanager
 
-###    dest="{{ domain_application_home }}"
-###    dest="{{ domain_application_home }}"
- 
-# ==> Create managed server on Domain
-- name: Copy create managed server script
-  template: src=create-managed.py dest={{ mw_installer_folder }}
-- name: Execute create managed server script
-  shell: '{{middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/create-managed.py'
-    
+- name: Waiting for nodemanager to come up
+  wait_for: port=5556 delay=5 timeout=90
+  tags:
+    - start-nodemanager
+
 # ==> Start managed server
 - name: Create security folder for managed server
   file: state=directory path={{ domains_home }}/{{ domain_name }}/servers/{{ managed_server_name }}/security
+
 - name: Create boot properties file for managed server
   template: src=boot.properties dest={{ domain_home }}/servers/{{ managed_server_name }}/security/
+
 - name: Copy Start Managed Server Script
   template: src=start-managed-server.py dest={{ mw_installer_folder }}
+
 - name: Start Managed Server
   shell: "{{ middleware_common_home }}/common/bin/wlst.sh {{ mw_installer_folder }}/start-managed-server.py"
   async: 1000
   poll: 0
+
 - name: Wait for Managed Server to startup 
   wait_for: host={{ server_hostname }} port={{ managed_server_port }} delay=5 timeout=90
+
